# kabam_msgs

./: CMakeLists.txt  LICENSE  package.xml
action/: MissionControl.action
kabam_msgs_ros1/: CMakeLists.txt
kabam_msgs_ros1/msg/: ChargerState.msg  Mission.msg  MissionList.msg  ScoutStatus.msg  Task.msg  TaskParam.msg
kabam_msgs_ros1/srv/: GetLastWpReached.srv  GetMissionDetails.srv  GetMissionList.srv  StartMapping.srv
kabam_msgs_ros2/: CMakeLists.txt  README.md  package.xml
kabam_msgs_ros2/action/: AutoDocking.action
kabam_msgs_ros2/msg/: ChargerState.msg  MoveBaseAction.msg  MoveBaseActionGoal.msg  WaypointList.msg
kabam_msgs_ros2/srv/: GetScheduleList.srv
msg/: MissionIdentifier.msg  ScoutStatus.msg  TaskStatus.msg  Waypoint.msg
srv/: GetMissionList.srv  ParamTrigger.srv  StartMission.srv
